// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast base: show 1`] = `
<body>
  
  
  

  
  
  

  <div />
  <div
    class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
  />
  <div
    class="eui-toast eui-fade-entry-done eui-fade"
  >
    toastTxt
  </div>
</body>
`;

exports[`Toast snapshots: close 1`] = `
<body>
  
  
  

  <div>
    <div />
  </div>
</body>
`;

exports[`Toast snapshots: show 1`] = `
<body>
  
  
  

  <div>
    <div />
  </div>
  <div>
    <div
      class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
    />
    <div
      class="eui-toast eui-fade-entry-done eui-fade"
    >
      normal
    </div>
  </div>
  <div>
    <div
      class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
    />
    <div
      class="eui-toast eui-fade-entry-done eui-fade"
    >
      <svg
        aria-hidden="true"
        class="eui-icon eui-icon-xl"
        fill="#fff"
      >
        <use
          xlink:href="#alert"
        />
      </svg>
      <div
        class="eui-whitespace eui-whitespace-l"
      />
      alert
    </div>
  </div>
  <div>
    <div
      class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
    />
    <div
      class="eui-toast eui-fade-entry-done eui-fade"
    >
      <svg
        aria-hidden="true"
        class="eui-icon eui-icon-xl"
        fill="#fff"
      >
        <use
          xlink:href="#successful"
        />
      </svg>
      <div
        class="eui-whitespace eui-whitespace-l"
      />
      success
    </div>
  </div>
  <div />
  <div>
    <div
      class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
    />
    <div
      class="eui-toast eui-fade-entry-done eui-fade"
    >
      <svg
        aria-hidden="true"
        class="eui-icon eui-icon-xl"
        fill="#fff"
      >
        <use
          xlink:href="#alert"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
    />
    <div
      class="eui-toast eui-fade-entry-done eui-fade"
    >
      <svg
        aria-hidden="true"
        class="eui-icon eui-icon-xl"
        fill="#fff"
      >
        <use
          xlink:href="#successful"
        />
      </svg>
    </div>
  </div>
  <div>
    <div
      class="eui-Cover eui-Cover-transparent eui-fade-entry-done eui-fade"
    />
    <div
      class="eui-toast eui-fade-entry-done eui-fade"
    >
      <svg
        aria-hidden="true"
        class="eui-icon eui-icon-xl eui-icon-loading"
        fill="#fff"
      >
        <use
          xlink:href="#loading"
        />
      </svg>
    </div>
  </div>
</body>
`;
